--- a/provision/ansible/Containerfile
+++ b/provision/ansible/Containerfile
@@ -3,4 +3,7 @@ FROM alpine as OS
 
 RUN apk add python3 py3-pip
 RUN --mount=type=cache,target=/root/.cache/pip python3 -m pip install ansible
+RUN mkdir -p /etc/ansible && \
+    ansible-config init --disabled > /etc/ansible/ansible.cfg
 ENV ANSIBLE_CONFIG=/localhost/ansible/ansible.cfg
+
