update with helm script updates for dashboard

--- a/provision/ansible/site.yml
+++ b/provision/ansible/site.yml
@@ -1,6 +1,4 @@
   - name: Playbook
     hosts: local_machine
-    tasks:
-      - name: aaa
-        debug:
-          msg: "hi"
+    roles:
+      - common
