udpate helm scripts

--- a/apps/k3s/kubernetes-dashboard/base/clusterrolebinding-readonly.yaml
+++ b/apps/k3s/kubernetes-dashboard/base/clusterrolebinding-readonly.yaml
@@ -13,3 +13,23 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: kubernetes-dashboard-readonly
+  labels:
+    app.kubernetes.io/name: kubernetes-dashboard
+    helm.sh/chart: kubernetes-dashboard-6.0.0
+    app.kubernetes.io/instance: kubernetes-dashboard
+    app.kubernetes.io/version: "2.7.0"
+    app.kubernetes.io/managed-by: Helm
+  annotations:
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: kubernetes-dashboard-readonly
+subjects:
+  - kind: ServiceAccount
+    name: kubernetes-dashboard
+    namespace: default
