--- a/apps/k3s/kubernetes-dashboard/base/rolebinding.yaml
+++ b/apps/k3s/kubernetes-dashboard/base/rolebinding.yaml
@@ -17,19 +17,19 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: release-name-kubernetes-dashboard
+  name: kubernetes-dashboard
   labels:
     app.kubernetes.io/name: kubernetes-dashboard
     helm.sh/chart: kubernetes-dashboard-6.0.0
-    app.kubernetes.io/instance: release-name
+    app.kubernetes.io/instance: kubernetes-dashboard
     app.kubernetes.io/version: "2.7.0"
     app.kubernetes.io/managed-by: Helm
   annotations:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: release-name-kubernetes-dashboard
+  name: kubernetes-dashboard
 subjects:
   - kind: ServiceAccount
-    name: release-name-kubernetes-dashboard
+    name: kubernetes-dashboard
     namespace: default
