--- a/apps/k3s/kubernetes-dashboard/base/clusterrole-metrics.yaml
+++ b/apps/k3s/kubernetes-dashboard/base/clusterrole-metrics.yaml
@@ -17,11 +17,11 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: "release-name-kubernetes-dashboard-metrics"
+  name: "kubernetes-dashboard-metrics"
   labels:
     app.kubernetes.io/name: kubernetes-dashboard
     helm.sh/chart: kubernetes-dashboard-6.0.0
-    app.kubernetes.io/instance: release-name
+    app.kubernetes.io/instance: kubernetes-dashboard
     app.kubernetes.io/version: "2.7.0"
     app.kubernetes.io/managed-by: Helm
   annotations:
