--- a/apps/k3s/kubernetes-dashboard/base/service.yaml
+++ b/apps/k3s/kubernetes-dashboard/base/service.yaml
@@ -17,12 +17,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: release-name-kubernetes-dashboard
+  name: kubernetes-dashboard
   labels:
     
     app.kubernetes.io/name: kubernetes-dashboard
     helm.sh/chart: kubernetes-dashboard-6.0.0
-    app.kubernetes.io/instance: release-name
+    app.kubernetes.io/instance: kubernetes-dashboard
     app.kubernetes.io/version: "2.7.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: kubernetes-dashboard
@@ -38,5 +38,5 @@ spec:
   selector:
 
     app.kubernetes.io/name: kubernetes-dashboard
-    app.kubernetes.io/instance: release-name
+    app.kubernetes.io/instance: kubernetes-dashboard
     app.kubernetes.io/component: kubernetes-dashboard
