--- a/apps/k3s/kubernetes-dashboard/base/serviceaccount.yaml
+++ b/apps/k3s/kubernetes-dashboard/base/serviceaccount.yaml
@@ -20,8 +20,8 @@ metadata:
   labels:
     app.kubernetes.io/name: kubernetes-dashboard
     helm.sh/chart: kubernetes-dashboard-6.0.0
-    app.kubernetes.io/instance: release-name
+    app.kubernetes.io/instance: kubernetes-dashboard
     app.kubernetes.io/version: "2.7.0"
     app.kubernetes.io/managed-by: Helm
   annotations:
-  name: release-name-kubernetes-dashboard
+  name: kubernetes-dashboard
