--- a/apps/k3s/kubernetes-dashboard/base/configmap.yaml
+++ b/apps/k3s/kubernetes-dashboard/base/configmap.yaml
@@ -20,7 +20,7 @@ metadata:
   labels:
     app.kubernetes.io/name: kubernetes-dashboard
     helm.sh/chart: kubernetes-dashboard-6.0.0
-    app.kubernetes.io/instance: kubernetes-dashboard
+    app.kubernetes.io/instance: release-name
     app.kubernetes.io/version: "2.7.0"
     app.kubernetes.io/managed-by: Helm
   annotations:
