--- a/apps/k3s/kubernetes-dashboard/base/secret.yaml
+++ b/apps/k3s/kubernetes-dashboard/base/secret.yaml
@@ -21,7 +21,7 @@ metadata:
   labels:
     app.kubernetes.io/name: kubernetes-dashboard
     helm.sh/chart: kubernetes-dashboard-6.0.0
-    app.kubernetes.io/instance: kubernetes-dashboard
+    app.kubernetes.io/instance: release-name
     app.kubernetes.io/version: "2.7.0"
     app.kubernetes.io/managed-by: Helm
   annotations:
@@ -37,7 +37,7 @@ metadata:
 
     app.kubernetes.io/name: kubernetes-dashboard
     helm.sh/chart: kubernetes-dashboard-6.0.0
-    app.kubernetes.io/instance: kubernetes-dashboard
+    app.kubernetes.io/instance: release-name
     app.kubernetes.io/version: "2.7.0"
     app.kubernetes.io/managed-by: Helm
   name: kubernetes-dashboard-csrf
@@ -52,7 +52,7 @@ metadata:
 
     app.kubernetes.io/name: kubernetes-dashboard
     helm.sh/chart: kubernetes-dashboard-6.0.0
-    app.kubernetes.io/instance: kubernetes-dashboard
+    app.kubernetes.io/instance: release-name
     app.kubernetes.io/version: "2.7.0"
     app.kubernetes.io/managed-by: Helm
   name: kubernetes-dashboard-key-holder
