--- a/apps/k3s/traefik/base/ingressclass.yaml
+++ b/apps/k3s/traefik/base/ingressclass.yaml
@@ -7,9 +7,9 @@ metadata:
     ingressclass.kubernetes.io/is-default-class: "true"
   labels:
     app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: release-name-default
+    app.kubernetes.io/instance: traefik-default
     helm.sh/chart: traefik-20.8.0
     app.kubernetes.io/managed-by: Helm
-  name: release-name-traefik
+  name: traefik
 spec:
   controller: traefik.io/ingress-controller
