--- a/apps/k3s/traefik/base/rbac/clusterrole.yaml
+++ b/apps/k3s/traefik/base/rbac/clusterrole.yaml
@@ -3,10 +3,10 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: release-name-traefik-default
+  name: traefik-default
   labels:
     app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: release-name-default
+    app.kubernetes.io/instance: traefik-default
     helm.sh/chart: traefik-20.8.0
     app.kubernetes.io/managed-by: Helm
 rules:
