--- a/apps/k3s/traefik/base/rbac/clusterrolebinding.yaml
+++ b/apps/k3s/traefik/base/rbac/clusterrolebinding.yaml
@@ -3,17 +3,17 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: release-name-traefik-default
+  name: traefik-default
   labels:
     app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: release-name-default
+    app.kubernetes.io/instance: traefik-default
     helm.sh/chart: traefik-20.8.0
     app.kubernetes.io/managed-by: Helm
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: release-name-traefik-default
+  name: traefik-default
 subjects:
   - kind: ServiceAccount
-    name: release-name-traefik
+    name: traefik
     namespace: default
