--- a/apps/k3s/traefik/base/rbac/serviceaccount.yaml
+++ b/apps/k3s/traefik/base/rbac/serviceaccount.yaml
@@ -3,11 +3,11 @@
 kind: ServiceAccount
 apiVersion: v1
 metadata:
-  name: release-name-traefik
+  name: traefik
   namespace: default
   labels:
     app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: release-name-default
+    app.kubernetes.io/instance: traefik-default
     helm.sh/chart: traefik-20.8.0
     app.kubernetes.io/managed-by: Helm
   annotations:
