--- a/apps/k3s/traefik/base/service.yaml
+++ b/apps/k3s/traefik/base/service.yaml
@@ -3,11 +3,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: release-name-traefik
+  name: traefik
   namespace: default
   labels:
     app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: release-name-default
+    app.kubernetes.io/instance: traefik-default
     helm.sh/chart: traefik-20.8.0
     app.kubernetes.io/managed-by: Helm
   annotations:
@@ -15,12 +15,17 @@ spec:
   type: LoadBalancer
   selector:
     app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: release-name-default
+    app.kubernetes.io/instance: traefik-default
   ports:
+  - port: 9000
+    name: "traefik"
+    targetPort: traefik
+    protocol: TCP
   - port: 80
     name: "web"
     targetPort: web
     protocol: TCP
+    nodePort: 32080
   - port: 443
     name: "websecure"
     targetPort: websecure
