--- a/apps/k3s/traefik/values.yaml
+++ b/apps/k3s/traefik/values.yaml
@@ -135,13 +135,15 @@ ingressRoute:
     # Additional ingressRoute labels (e.g. for filtering IngressRoute by custom labels)
     labels: {}
     # The router match rule used for the dashboard ingressRoute
-    matchRule: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
+    matchRule: Host(`traefik.themachine`) && PathPrefix(`/dashboard`,`/api`) # || PathPrefix(`/traefik`)
     # Specify the allowed entrypoints to use for the dashboard ingress route, (e.g. traefik, web, websecure).
     # By default, it's using traefik entrypoint, which is not exposed.
     # /!\ Do not expose your dashboard without any protection over the internet /!\
-    entryPoints: ["traefik"]
+    entryPoints: ["traefik","web","websecure"]
     # Additional ingressRoute middlewares (e.g. for authentication)
-    middlewares: []
+    # middlewares:
+    #   - name: default-traefik-replacepath-regex@kubernetescrd
+    # HostRegexp(`themachine`, `traefik.{domain:[a-z]+}`)
 
 # Customize updateStrategy of traefik pods
 updateStrategy:
