--- a/apps/k3s/kubernetes-dashboard/values.yaml
+++ b/apps/k3s/kubernetes-dashboard/values.yaml
@@ -170,13 +170,13 @@ ingress:
   enabled: true
 
   ## Kubernetes Dashboard Ingress labels
-  # labels:
-  #   key: value
+  labels:
+    helm-values: "true"
 
   ## Kubernetes Dashboard Ingress annotations
-  # annotations:
-  #   kubernetes.io/ingress.class: nginx
-  #   kubernetes.io/tls-acme: 'true'
+  labels:
+    app.kubernetes.io/name2: traefik
+    app.kubernetes.io/instance2: traefik-default
 
   ## If you plan to use TLS backend with enableInsecureLogin set to false
   ## (default), you need to uncomment the below.
@@ -192,7 +192,8 @@ ingress:
   ## Both `/` and `/*` are required to work on gce ingress.
   paths:
     - /
-  #  - /*
+    - /*
+    - /kubernetes
 
   ## Custom Kubernetes Dashboard Ingress paths. Will override default paths.
   ##
@@ -214,8 +215,8 @@ ingress:
   ## Kubernetes Dashboard Ingress hostnames
   ## Must be provided if Ingress is enabled
   ##
-  # hosts:
-  #   - kubernetes-dashboard.domain.com
+  hosts:
+    - themachine
   ## Kubernetes Dashboard Ingress TLS configuration
   ## Secrets must be manually created in the namespace
   ##
