--- a/apps/k3s/kubernetes-dashboard/base/ingress.yaml
+++ b/apps/k3s/kubernetes-dashboard/base/ingress.yaml
@@ -24,8 +24,7 @@ metadata:
     app.kubernetes.io/instance: kubernetes-dashboard
     app.kubernetes.io/version: "2.7.0"
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/instance2: "traefik-default"
-    app.kubernetes.io/name2: "traefik"
+    method: "traefik"
   annotations:
     # Add https backend protocol support for ingress-nginx
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
@@ -33,7 +32,7 @@ metadata:
     service.alpha.kubernetes.io/app-protocols: '{"https":"HTTPS"}'
 spec:
   rules:
-    - host: themachine
+    - host: kubernetes-dashboard.themachine
       http:
         paths:
           - path: /
@@ -44,13 +43,6 @@ spec:
                 port:
                   number: 443
           - path: /*
-            pathType: ImplementationSpecific
-            backend:
-              service:
-                name: kubernetes-dashboard
-                port:
-                  number: 443
-          - path: /kubernetes
             pathType: ImplementationSpecific
             backend:
               service:
