--- a/apps/k3s/traefik/base/deployment.yaml
+++ b/apps/k3s/traefik/base/deployment.yaml
@@ -103,6 +103,7 @@ spec:
           - "--metrics.prometheus.entrypoint=metrics"
           - "--providers.kubernetescrd"
           - "--providers.kubernetesingress"
+          - "--providers.kubernetesingress.labelSelector=method=traefik"
           - "--entrypoints.websecure.http.tls=true"
           - "--log.level=DEBUG"
           - "--accesslog=true"
