update get helm to add make targets

--- a/apps/k3s/keycloak/base/charts/postgresql/templates/secrets.yaml
+++ b/apps/k3s/keycloak/base/charts/postgresql/templates/secrets.yaml
@@ -12,5 +12,5 @@ metadata:
   namespace: default
 type: Opaque
 data:
-  postgresql-postgres-password: "N256TVhaRlV3WA=="
+  postgresql-postgres-password: "ZGRldDA4TEZFNA=="
   postgresql-password: "a2V5Y2xvYWs="
