--- a/apps/k3s/keycloak/base/statefulset.yaml
+++ b/apps/k3s/keycloak/base/statefulset.yaml
@@ -89,14 +89,14 @@ spec:
               value: DEBUG
             - name: WILDFLY_LOGLEVEL
               value: DEBUG
-            - name: KEYCLOAK_ADMIN
-              value: admin
-            - name: KEYCLOAK_ADMIN_PASSWORD
-              value: change_me
             - name: KEYCLOAK_USER
               value: user
             - name: KEYCLOAK_PASSWORD
               value: change_me
+            # - name: KEYCLOAK_ADMIN
+            #   value: admin
+            # - name: KEYCLOAK_ADMIN_PASSWORD
+            #   value: change_me
             # - name: CACHE_OWNERS_COUNT
             #   value: "2"
             # - name: CACHE_OWNERS_AUTH_SESSIONS_COUNT
