--- a/apps/k3s/keycloak/base/charts/postgresql/templates/secrets.yaml
+++ b/apps/k3s/keycloak/base/charts/postgresql/templates/secrets.yaml
@@ -12,5 +12,5 @@ metadata:
   namespace: default
 type: Opaque
 data:
-  postgresql-postgres-password: "ZGRldDA4TEZFNA=="
+  postgresql-postgres-password: "dGxDZTMyZEl2dw=="
   postgresql-password: "a2V5Y2xvYWs="
