--- a/apps/k3s/prometheus/base/kustomization.yaml
+++ b/apps/k3s/prometheus/base/kustomization.yaml
@@ -14,6 +14,22 @@
 #commonLabels: Modify_if_desired
 #roles: Modify_if_desired
 resources:
+- charts/alertmanager/templates/configmap.yaml
+- charts/alertmanager/templates/serviceaccount.yaml
+- charts/alertmanager/templates/services.yaml
+- charts/alertmanager/templates/statefulset.yaml
+- charts/alertmanager/templates/tests/test-connection.yaml
+- charts/kube-state-metrics/templates/clusterrolebinding.yaml
+- charts/kube-state-metrics/templates/deployment.yaml
+- charts/kube-state-metrics/templates/role.yaml
+- charts/kube-state-metrics/templates/service.yaml
+- charts/kube-state-metrics/templates/serviceaccount.yaml
+- charts/prometheus-node-exporter/templates/daemonset.yaml
+- charts/prometheus-node-exporter/templates/service.yaml
+- charts/prometheus-node-exporter/templates/serviceaccount.yaml
+- charts/prometheus-pushgateway/templates/deployment.yaml
+- charts/prometheus-pushgateway/templates/service.yaml
+- charts/prometheus-pushgateway/templates/serviceaccount.yaml
 - clusterrole.yaml
 - clusterrolebinding.yaml
 - cm.yaml
