--- a/apps/k3s/keycloak/base/serviceaccount.yaml
+++ b/apps/k3s/keycloak/base/serviceaccount.yaml
@@ -10,5 +10,6 @@ metadata:
     app.kubernetes.io/instance: keycloak
     app.kubernetes.io/version: "17.0.1-legacy"
     app.kubernetes.io/managed-by: Helm
+    method: "traefik"
 imagePullSecrets:
     []
