--- a/apps/k3s/keycloak/base/service-http.yaml
+++ b/apps/k3s/keycloak/base/service-http.yaml
@@ -10,6 +10,7 @@ metadata:
     app.kubernetes.io/instance: keycloak
     app.kubernetes.io/version: "17.0.1-legacy"
     app.kubernetes.io/managed-by: Helm
+    method: "traefik"
     app.kubernetes.io/component: http
 spec:
   type: ClusterIP
