--- a/provision/ansible/ansible.cfg
+++ b/provision/ansible/ansible.cfg
@@ -6,9 +6,11 @@ log_path=/tmp/.ansible/ansible.log
 private_key_file=/ssh/id_rsa
 roles_path=roles
 stdout_callback=yaml
-verbosity=1
+verbosity=0
 host_key_checking=False
 [privilege_escalation]
+become_method=sudo
+become_user=ansible
 [persistent_connection]
 control_path_dir=/tmp/cp
 [connection]
