--- a/provision/ansible/Containerfile
+++ b/provision/ansible/Containerfile
@@ -3,6 +3,7 @@ FROM alpine as OS
 
 RUN apk add python3 py3-pip openssh-client
 RUN --mount=type=cache,target=/root/.cache/pip python3 -m pip install ansible
+RUN ansible-galaxy collection install ansible.netcommon
 RUN mkdir -p /etc/ansible && \
     ansible-config init --disabled > /etc/ansible/ansible.cfg
 RUN mkdir -p /tmp/.ansible/cp/ && chmod 777 -R /tmp
