--- a/provision/ansible/ansible.cfg.in
+++ b/provision/ansible/ansible.cfg.in
@@ -57,6 +57,9 @@ home=/tmp/.ansible
 
 ;collections_path={{ ANSIBLE_HOME ~ "/collections:/usr/share/ansible/collections" }}
 
+;library=/tmp/plugins/modules:/plugins/module_utils:/usr/share/ansible/plugins/module_utils:/localhost/ansible/library
+;nocolor=True
+
 # (boolean) A boolean to enable or disable scanning the sys.path for installed collections
 ;collections_scan_sys_path=True
 
@@ -281,7 +284,7 @@ stdout_callback=yaml
 ;vault_password_file=
 
 # (integer) Sets the default verbosity, equivalent to the number of ``-v`` passed in the command line.
-verbosity=1
+verbosity=0
 
 # (boolean) Toggle to control the showing of deprecation warnings
 ;deprecation_warnings=True
@@ -445,11 +448,11 @@ host_key_checking=False
 ;become_flags=
 
 # (string) Privilege escalation method to use when `become` is enabled.
-;become_method=sudo
+become_method=sudo
 
 # (string) The user your login/remote user 'becomes' when using privilege escalation, most systems will use 'root' when no user is specified.
 ;become_user=root
-
+become_user=ansible
 
 [persistent_connection]
 # (path) Specify where to look for the ansible-connection script. This location will be checked before searching $PATH.
