--- a/provision/ansible/site.yml
+++ b/provision/ansible/site.yml
@@ -1,4 +1,5 @@
-  - name: Playbook
-    hosts: local_machine
-    roles:
-      - common
+- name: Playbook
+  hosts: local_machine
+  roles:
+    - common
+    - basic_linux_packages
